
MKS
----------------------
* Fix synchronization failure on Linux (CC-576).

OSEnvironment
----------------------
* Fix for Windows Server 2003 and Java 5 (CC-573). Patch by Nate Austin

P4
----------------------
* Display modification time using local timezone if correctForServerTime is true (CC-574). Patch by Anatol Pomozov

Project
----------------------
* Fix NPE when there are multiple build threads and config.xml is reloaded during a build.

PropertyFileLabelIncrementer
----------------------
* PropertyFileLabelIncrementer uses specified property file, not the previous log file. (CC-519)  Patch by Chad Woolley and Joe Moore.

PVCS
----------------------
* Add support for property attribute

SocketPublisher
----------------------
* Send project name and fixed vs. successful status (CC-575). Patch by Daniel Lindner

Surround (SSCM)
----------------------
* Correct documentation to indicate support for property attribute.

SVN
----------------------
* Add checkExternals flag to check for changes in svn:externals. (CC-585). Patch by Chad Woolley.

TimeBuild
----------------------
* Add support for the property attribute

Veto
----------------------
* New SourceControl plug-in used to prevent a project from building when a dependency is out of date.

Maven2SnapshotDependency
----------------------
* Fix OutOfMemory exception in Maven2SnapshotDependency (CC-578). Patch by Anatol Pomozov

reporting application
======================

rss.jsp
----------------------
* Fixed NPE for projects without logs in their directory.

NavigationCountTag
----------------------
* Changed NavigationCountTag to extend CruiseControlTagSupport instead of CruiseControlBodyTagSupport to avoid error message that instances of BodyTag are not allowed to return EVAL_BODY_INCLUDE.

testdetails.xsl
----------------------
* Fixed failure and error links (CC-545). Patch by J. David Beutel.


CruiseControl Release Notes - 2.6

general
======================