@@ -3726,9 +3726,10 @@ password=P@ssW0rd!
                 <td>Valid Perforce view (i.e. a depot path)</td>
             </tr>
             <tr>
-               <td>property</td>
-               <td>No</td>
-               <td>Unsupported!</td>
+                <td>property</td>
+                <td>No</td>
+                <td>Set this property if a modification has occurred.  For use
+                in conditionally controlling the build later.</td>
             </tr>
             <tr>
                 <td>usep4email</td>
